clap/backends/clap-fastapi/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clap-fastapi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: clap-fastapi
