clap/backends/clap-fastapi/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clap-fastapi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: clap-fastapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clap-fastapi
            port:
              number: 80
